# lazyvim-config

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  flake.nix  init.lua  lazy-lock.json  lazyvim.json
.cargo/: config
common/: Cargo.toml
common/src/: api.rs  clue.rs  ffi.rs  lib.rs  macros.rs  types.rs
crates/autocmds/: Cargo.toml
crates/autocmds/src/: lib.rs
crates/common/: Cargo.toml
crates/init/: Cargo.toml
crates/init/src/: ffi.rs  keymaps.rs  lazy.rs  lib.rs  macros.rs  nvim.rs  options.rs  plugins.rs
crates/keymaps/: Cargo.toml
crates/keymaps/src/: lib.rs
crates/options/: Cargo.toml
crates/options/src/: lib.rs
crates/plugins/: Cargo.toml
keymaps/: Cargo.toml
keymaps/src/: lib.rs
lua/: bootstrap.lua  lsp.lua
lua/config/: autocmds.lua  keymaps.lua  lazy.lua  options.lua
lua/plugins/: black-magic.lua  code.lua  color.lua  dap.lua  default.lua  init.lua  light-blast.lua  love-storm.lua  loving-heart.lua  ls.lua  magic-space.lua  magicancon.lua  view.lua
mvim/: Cargo.toml
mvim-lsp/: Cargo.toml
mvim-lsp/src/: channel.rs  client.rs  lib.rs  main.rs
mvim/src/: init.rs  lib.rs
options/: Cargo.toml
options/src/: lib.rs
rust/common/: Cargo.toml
rust/init/: Cargo.toml
rust/keymaps/: Cargo.toml
rust/options/: Cargo.toml
snippets/: .luarc.json  nix.lua  rust.lua
snippets/rust/: cpio.rs
src/: init.rs  lazy.rs  lib.rs  macros.rs  nvim.rs  options.rs  plugins.rs
src/config/: mod.rs  options.rs
src/plugins/: lsp.rs  mod.rs
src/utils/: mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+13 files in other folders)
