[package]
name = "lazyvim-config"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = [
  "common",
  "options",
  "keymaps",
]

[lib]
name = "init"
crate-type = ["cdylib"]

[dependencies]
common = { path = "common" }
mlua = { version = "0.8.8", features = ["luajit", "module", "mlua_derive", "vendored"] }
