[package]
name = "mvim"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[workspace]
members = [
    "xtask",
    "mvim-lsp",
]

[dependencies]
mlua = { version = "0.9.2", features = ["luajit", "macros"] }
nvim-oxi = { version = "0.4.1", features = ["neovim-nightly", "libuv", "mlua"] }
