[package]
name = "mvim-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
futures = "0.3.29"
jsonrpc-core = "18.0.0"
lsp-types = "0.95.0"
nvim-oxi = { version = "0.4.1", features = ["neovim-nightly", "libuv", "mlua"] }
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }
